# bugs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  routes.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useClipboard.ts  (+2 more)
migrations/: 001_initial_schema.sql  002_fts5_indexes.sql  003_expression_indexes.sql  004_issue_muting.sql  005_issue_comments.sql  006_resolve_by_release.sql  007_issue_activity.sql  008_user_feedback.sql  009_deploys.sql  010_performance.sql  011_issue_sort_indexes.sql  012_issue_filter_indexes.sql  013_fts5_update_trigger.sql  014_event_tags_project_fk.sql  015_additional_indexes.sql  016_symbolication_state.sql  017_debug_ids_project_and_arch.sql  018_event_attachments.sql
src/: config.rs  lib.rs  main.rs
src/api/: admin_auth.rs  alerts.rs  chunked_upload.rs  comments.rs  dsyms.rs  events.rs  frontend.rs  ingest.rs  ingest_auth.rs  issues.rs  mod.rs  performance.rs  projects.rs  releases.rs  search.rs  stats.rs  user_reports.rs
src/db/: checkpoint.rs  mod.rs  pool.rs  retention.rs
src/ingest/: abuse.rs  auth.rs  envelope.rs  mod.rs  store.rs
src/models/: activity.rs  alert.rs  comment.rs  deploy.rs  event.rs  issue.rs  mod.rs  project.rs  release.rs  transaction.rs  user_report.rs
src/sentry_protocol/: dsn.rs  envelope.rs  mod.rs  types.rs
src/util/: atomic_fs.rs  byte_capped_lru.rs  chunk_store.rs  hash.rs  id.rs  log.rs  mod.rs  time.rs
src/worker/: alerts.rs  fingerprint.rs  indexer.rs  mod.rs  native_symbolication.rs  normalizer.rs  processor.rs  releases.rs  symbolication.rs
tests/: ingest_test.rs  native_symbolication_test.rs
(+42 files in other folders)
