[package]
name = "bugs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = { version = "0.5", features = ["make"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "normalize-path", "trace", "set-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs", "io-util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Source maps
sourcemap = "9"

# Native debug info (DIF) parsing, SymCache, demangling
symbolic = { version = "12", features = ["debuginfo", "demangle", "symcache"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
memmap2 = "0.9"

# Compression, hashing, IDs
flate2 = "1"
sha1 = "0.10"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# Time, config, logging
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
regex = "1"
once_cell = "1"
lru = "0.16"
rust-embed = "8"
mime_guess = "2"
url = "2"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
bytes = "1"
base64 = "0.22"
thiserror = "2"
subtle = "2"
tempfile = "3"

[profile.release]
strip = "symbols"

[profile.dev]
debug = "line-tables-only"
